add_subdirectory(rf5c68)
add_subdirectory(sid_6581)
add_subdirectory(sn76489)
add_subdirectory(ym2612)
add_subdirectory(ym2151)
add_subdirectory(dac8)
add_subdirectory(adpcm_a)
add_subdirectory(adpcm_b)
add_subdirectory(paula)
add_subdirectory(ricoh_2a03_apu)
add_subdirectory(s_dsp)
add_subdirectory(scsp)
add_subdirectory(ssg)
add_subdirectory(ym2413)
