add_subdirectory(beeper)
add_subdirectory(msm5205)
add_subdirectory(okim6295)
add_subdirectory(irem_ga20)
add_subdirectory(qsound)
add_subdirectory(rf5c68)
add_subdirectory(sid_6581)
add_subdirectory(sn76489)
add_subdirectory(ym2612)
add_subdirectory(ym2151)
add_subdirectory(ymz280b)
add_subdirectory(dac8)
add_subdirectory(mmc5)
add_subdirectory(n163)
add_subdirectory(adpcm_a)
add_subdirectory(adpcm_b)
add_subdirectory(paula)
add_subdirectory(ricoh_2a03_apu)
add_subdirectory(rp2c33)
add_subdirectory(s_dsp)
add_subdirectory(scsp)
add_subdirectory(scc)
add_subdirectory(ssg)
add_subdirectory(vrc6)
add_subdirectory(ym2413)
add_subdirectory(ym2610)
